facebook following ui change

--- a/lib/modules/mods/facebook/web/index.html
+++ b/lib/modules/mods/facebook/web/index.html
@@ -59,10 +59,10 @@
           <div class="facebook_button_big left" id="settings"><i class="fa fa-gear"></i></div>
         </div>
 
-        <div class="following" id="following">
+        <!-- <div class="following" id="following">
           <div class="following_label">Currently Following:</div>
           <div id="following_friends_box">You have no friends :(</div>
-        </div>
+        </div> -->
 
       </div>
 
@@ -83,6 +83,11 @@
 
 
   <div class="lightbox_follow" id="lightbox_follow" style="display:none">
+    <div class="following" id="following">
+      <div class="following_label">Currently Following:</div>
+      <div id="following_friends_box" style="font-size: 16px; font-weight: bold;">You have no friends :(</div>
+    </div>
+
     <center>Who do you want to follow:</center>
     <p></p>
     <input id="lightbox_follow_input" class="lightbox_follow_input" />
