--- a/lib/modules/mods/chat/web/index.html
+++ b/lib/modules/mods/chat/web/index.html
@@ -52,7 +52,7 @@
         </select>
         <!-- <button class="addUser">+</button> -->
       </section>
-      <section id="main">
+      <div id="main" class="mainchat">
         <!-- The Modal -->
 
         <!-- <div id="lightbox_compose" style="display:none">
@@ -72,7 +72,7 @@
             </p>
           </ul>
         </section>
-      </section>
+      </div>
       <section id="new-message">
         <input class="new-message-input" id="new-message-input">
         </input>
