bugfixes and chat update

--- a/lib/modules/mods/chat/web/index.html
+++ b/lib/modules/mods/chat/web/index.html
@@ -47,7 +47,7 @@
       </section>
       <div id="chat_main" class="chat_chat_main">
 
-        <section id="chat_messages-list">Messages:</section>
+        <!--- <section id="chat_messages-list">Messages:</section> --->
 
         <section id="chat_messages-list">
           <ul class="chat_messages-list" id="All">
