--- a/lib/saito/web/index.html
+++ b/lib/saito/web/index.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="/jquery/jquery-ui.min.css" type="text/css" media="screen" />
   <script type="text/javascript" src="/jquery/jquery-ui.min.js"></script>
 
+  <link rel="icon" media="all" type="image/x-icon" href="/favicon.ico?v=2"/>
+
 </head>
 <body>
 
