--- a/lib/modules/mods/mailchat/web/index.html
+++ b/lib/modules/mods/mailchat/web/index.html
@@ -87,7 +87,7 @@
 
   </div>
 
-  <div class="mail_chat_popup">
+  <div class="mail_chat_popup" style="display:none">
 
     <div id="Chat_browser_active"></div>
     <div id="chat_container">
