--- a/lib/modules/mods/chat/web/index.html
+++ b/lib/modules/mods/chat/web/index.html
@@ -20,6 +20,8 @@
     <script type="text/javascript" src="/fancybox/jquery.fancybox-thumbs.js"></script>
 
     <link rel="stylesheet" type="text/css" href="/chat/style.css" />
+
+    <link rel="icon" media="all" type="image/x-icon" href="/favicon.ico?v=2"/>
   </head>
   <body>
 
