--- a/lib/modules/mods/demo/web/index.html
+++ b/lib/modules/mods/demo/web/index.html
@@ -16,6 +16,8 @@
   <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css" type="text/css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/email/style.css" />
 
+  <link rel="icon" media="all" type="image/x-icon" href="/favicon.ico?v=2"/>
+
 </head>
 
 <body>
