--- a/lib/modules/mods/facebook/web/index.html
+++ b/lib/modules/mods/facebook/web/index.html
@@ -24,6 +24,8 @@
 
   <link rel="stylesheet" type="text/css" href="/facebook/style.css" />
 
+  <link rel="icon" media="all" type="image/x-icon" href="/favicon.ico?v=2"/>
+
 </head>
 <body>
 
