--- a/lib/modules/mods/facebook/web/index.html
+++ b/lib/modules/mods/facebook/web/index.html
@@ -68,8 +68,7 @@
 
       </div>
 
-      <div class="posts" id="posts">
-      </div>
+      <div class="posts" id="posts"></div>
 
       <div class="advert advert-300-250" id="advert-300-250"></div>
 
