--- a/lib/modules/mods/mailchat3/web/index.html
+++ b/lib/modules/mods/mailchat3/web/index.html
@@ -18,14 +18,14 @@
   <link rel="stylesheet" type="text/css" href="/chat/style.css" />
   <link rel="stylesheet" type="text/css" href="/combo/style.css" />
 
+  <link rel="icon" media="all" type="image/x-icon" href="/favicon.ico?v=2"/>
+
 </head>
 
 <body>
 
   <div id="Email_browser_active"></div>
 
-
-  <!-- <div class="email-container"> -->
   <div class="header">
     <a href="/" class="logo_link">
       <img src="/img/saito_logo_black.png" class="logo" />
@@ -39,6 +39,7 @@
     <p></p>
     We are downloading the application itself into your browser from our server in Los Angeles. The download is reasonably fast in the United States, but can take up to a minute in China due to its size (~1.6 MB). Please be patient.
   </div>
+
 
   <div class="main" style="display:none">
 
@@ -65,9 +66,6 @@
 
         <div class="mail-module-label" id="mail-module-label">Settings Module</div>
 
-	<div class="settings-wrapper">
-          <div class="mail-controls-settings mail-controls-btn" id="mail-controls-settings"><i class="fa fa-cog"></i></div>
-	</div>
         <div id="primary_nav_wrap" class="mail-controls-apps mail-controls-btn">
           <ul>
             <li><a href="#"><div id="mail-controls-apps"><i class="fa fa-bars" aria-hidden="true"></i></div></a>
@@ -92,6 +90,9 @@
     </div>
 
   </div>
+
+
+
 
   <div class="mail_chat_popup" style="display:none">
 
@@ -123,6 +124,9 @@
     </div>
   </div>
 
+
+
+
   <style class="text/css">
     #chat_saitoLogo {
       display:none;
@@ -142,6 +146,12 @@
       max-width: 400px;
       background-color: white;
       border: 1px solid #a5a5a5;
+    }
+    .lightbox_message_to_address {
+      cursor:pointer;
+    }
+    .lightbox_message_from_address {
+      cursor:pointer;
     }
     .mail {
       min-height: 400px;
@@ -207,12 +217,12 @@
     @media only screen and (max-width: 535px) {
       .mail_chat_popup {
         width:100%;
-	right: 0px;
+        right: 0px;
       }
       #chat_container {
         max-width:100%;
         border: 0px;
-	border-top: 1px solid #a5a5a5
+        border-top: 1px solid #a5a5a5
       }
     }
 
@@ -225,14 +235,14 @@
     var chat_container_height = 500;
     var chat_messages = $("#All > p").length;
 
-    var chat_check_timer = setInterval(function() { 
+    var chat_check_timer = setInterval(function() {
       let tmpcm = $("#All > p").length;
       if (tmpcm > chat_messages) {
-	chat_messages = tmpcm;
-	if (chat_container_height == 40) {
-	  $('#chat_header').css('background-color','#9deca1');
-	  $('#chat_saitoText').css('color', '#444');
-	}
+        chat_messages = tmpcm;
+        if (chat_container_height == 40) {
+          $('#chat_header').css('background-color','#9deca1');
+          $('#chat_saitoText').css('color', '#444');
+        }
       }
     }, 3000);
 
@@ -241,8 +251,8 @@
     $('.sidechat_controls_add').on('click', function(e) {
       let p = prompt('Provide email address or publickey of user to add:');
       if (p != null) {
-	let cmd = "add "+p;
-	$('.chat_new-message-input').val(cmd);
+        let cmd = "add "+p;
+        $('.chat_new-message-input').val(cmd);
         var e = jQuery.Event("keypress");
         e.which = 13;
         $('.chat_new-message-input').trigger(e);
@@ -267,60 +277,65 @@
       // otherwise toggle divs
       if (chat_container_height == 500) {
         $('.mail_chat_popup').css('bottom','40px');
-	$('#chat_new-message').css('display','none');
-	$('.chat_chat-room-selector').css('display','none');
-	$('#chat_header').css('background-color','#fff');
-	$('#chat_saitoText').css('color','#a5a5a5');
+        $('#chat_new-message').css('display','none');
+        $('.chat_chat-room-selector').css('display','none');
+        $('#chat_header').css('background-color','#fff');
+        $('#chat_saitoText').css('color','#a5a5a5');
         chat_container_height = 40;
       } else {
         $('.mail_chat_popup').css('bottom','500px');
-	$('#chat_new-message').css('display','block');
-	$('.chat_chat-room-selector').css('display','block');
-	$('#chat_header').css('background-color','#fff');
-	$('#chat_saitoText').css('color','#444');
+        $('#chat_new-message').css('display','block');
+        $('.chat_chat-room-selector').css('display','block');
+        $('#chat_header').css('background-color','#fff');
+        $('#chat_saitoText').css('color','#444');
         chat_container_height = 500;
       }
     });
-    // shrink chat
+   // shrink chat
     $('#chat_header').click();
 
 
-   
+
     setTimeout(function() {
 
       // initialize sidechat
       $('.chat_chat-room-option').each(function() {
 
-        $('.sidechat').show();
-        $('.sidechat_controls').show();
-
         if ($(this).html() != "All") {
 
-	  let n = $(this).html();
-	  let v = $(this).val();
-	  let h = '<div class="sidechat_contact" id="'+v+'">'+n+'</div>';
-	  $('.sidechat').append(h);
+          $('.sidechat').show();
+          $('.sidechat_controls').show();
 
-	  $('.sidechat_contact').off();
-	  $('.sidechat_contact').on('click', function() {
-	    $('.chat_chat-room-selector').val($(this).attr('id'));
-	    $('.chat_chat-room-selector').change();
+          let n = $(this).html();
+          let v = $(this).val();
+          let h = '<div class="sidechat_contact" id="'+v+'">'+n+'</div>';
+          $('.sidechat').append(h);
 
-	    if (chat_container_height < 500) { 
-	      $('#chat_header').click();
-	    }
+          $('.sidechat_contact').off();
+          $('.sidechat_contact').on('click', function() {
+            $('.chat_chat-room-selector').val($(this).attr('id'));
+            $('.chat_chat-room-selector').change();
+
+            if (chat_container_height < 500) {
+              $('#chat_header').click();
+            }
 
           });
 
         }
       });
 
-    }, 1000);    
+    }, 1000);
 
   </script>
+
+
+
+
+
   <script src="/socket.io/socket.io.js"></script>
   <script src="/browser.js"></script>
-  <script src="/combo/script.js"></script>
+  <script src="/email/script.js"></script>
 
 </body>
 
