--- a/lib/modules/mods/reddit/web/post.html
+++ b/lib/modules/mods/reddit/web/post.html
@@ -75,13 +75,13 @@
       </div>
 
       <div class="sidebar" id="sidebar">
-        <!-- <div class="submit" id="submit">submit post</div> -->
+        <input type="button"  class="submit" id="home" value="home" name="home" />
         <div class="balance" id="balance" style="right: 0.5rem;">
           <div class="saitoname" id="saitoname"></div>
           <div class="balance_money" id="balance_money">0.0</div>
           <div class="balance_label" id="balance_label">SAITO</div>
         </div>
-        <div class="advert-402-302" id="advert-402-302"></div>
+        <div class="advert-300-250" id="advert-300-250"></div>
       </div>
 
     </div>
