--- a/lib/modules/mods/reddit/web/index.html
+++ b/lib/modules/mods/reddit/web/index.html
@@ -33,7 +33,9 @@
   <div class="header">
     <a href="/" style="text-decoration:none;color:inherits">
       <img src="/img/saito_logo_black.png" class="logo" />
-      <div style="font-family:Georgia;padding-top:5px;font-size:1.2em;color:#444;">/r/</div>
+    </a>
+    <a href="/r/" style="text-decoration:none;color:inherits">
+      <div id="subreddit_link" style="font-family:Georgia;padding-top:5px;font-size:1.2em;color:#444;">/r/</div>
     </a>
   </div>
 
