--- a/lib/modules/mods/reddit/web/post.html
+++ b/lib/modules/mods/reddit/web/post.html
@@ -32,11 +32,11 @@
 
     <div class="header">
       <a href="/" style="text-decoration:none;color:inherits">
-        <img src="/img/saito_logo_black.png" style="width:35px;margin-top:5px;margin-left:25px;margin-right:10px;float:left;" />
-        <div style="font-family:Georgia;padding-top:5px;font-size:1.0em;color:#444;">/r/</div>
+        <img src="/img/saito_logo_black.png" class="logo" />
       </a>
-
-
+      <a href="/r/" style="text-decoration:none;color:inherits">
+        <div id="subreddit_link" style="font-family:Georgia;padding-top:5px;font-size:1.2em;color:#444;">/r/</div>
+      </a>
     </div>
 
     <div class="main" style="main">
@@ -76,7 +76,7 @@
 
       <div class="sidebar" id="sidebar">
         <input type="button"  class="submit" id="home" value="home" name="home" />
-        <div class="balance" id="balance" style="right: 0.5rem;">
+        <div class="balance" id="balance" style="">
           <div class="saitoname" id="saitoname"></div>
           <div class="balance_money" id="balance_money">0.0</div>
           <div class="balance_label" id="balance_label">SAITO</div>
