--- a/lib/modules/mods/mailchat3/web/index.html
+++ b/lib/modules/mods/mailchat3/web/index.html
@@ -49,6 +49,13 @@
         <div id="mailbox_inbox" class="mailbox active">Inbox</div>
         <div id="mailbox_sent" class="mailbox">Sent</div>
       </div>
+      <div id="blockchain_syncfade">
+        <div id="blockchain_synclabel">syncing blocks...</div>
+        <div id="blockchain_syncbox">
+          <div id="blockchain_syncbar">
+          </div>
+        </div>
+      </div>
       <div class="sidechat" id="sidechat">
       </div>
       <div class="sidechat_controls" id="sidechat_controls">
