bugfixes including chain reorg fixes for lite-clients on sync

--- a/lib/modules/mods/reddit/web/post.html
+++ b/lib/modules/mods/reddit/web/post.html
@@ -39,10 +39,14 @@
       </a>
     </div>
 
-    <div class="main" style="main">
+
+    <div class="loader" style="display:all">
+      Loading... please be patient.
+    </div>
+
+    <div class="main" style="display:none">
 
       <div class="discussion" id="discussion">
-
         <div class="d" id="d">
           <div class="post_author" id="post_author"></div>
           <div class="d_votes" id="d_votes">
