--- a/lib/modules/mods/reddit/web/mod.html
+++ b/lib/modules/mods/reddit/web/mod.html
@@ -28,7 +28,7 @@
 
   <div id="Reddit_browser_active"></div>
 
-  <div class="header">
+  <div class="header" style="height:50px">
     <a href="/" style="text-decoration:none;color:inherits">
       <img src="/img/saito_logo_black.png" style="width:35px;margin-top:5px;margin-left:25px;margin-right:10px;float:left;" />
       <div style="font-family:Georgia;padding-top:5px;font-size:1.2em;color:#444;">/r/ - moderation</div>
