branch to demonstrate burn feed hyperbolic reduction

--- a/lib/modules/mods/mailchat3/web/index.html
+++ b/lib/modules/mods/mailchat3/web/index.html
@@ -9,6 +9,9 @@
 
   <title>Saito Email</title>
 
+  <script type="text/javascript" src="/pace/pace.js"></script>
+  <link rel="stylesheet" href="/pace/pace-theme-flat-top.css" type="text/css" />
+
   <script type="text/javascript" src="/jquery/jquery-3.2.1.min.js"></script>
   <link rel="stylesheet" href="/jquery/jquery-ui.min.css" type="text/css" media="screen" />
   <script type="text/javascript" src="/jquery/jquery-ui.min.js"></script>
@@ -312,7 +315,7 @@
 
     setTimeout(function() { initialize_sidechat(); }, chat_init_speed);
 
-  
+
 
     function initialize_sidechat() {
 
@@ -357,6 +360,7 @@
   <script src="/socket.io/socket.io.js"></script>
   <script src="/browser.js"></script>
   <script src="/email/script.js"></script>
+
 
 </body>
 
