--- a/lib/modules/mods/reddit/web/index.html
+++ b/lib/modules/mods/reddit/web/index.html
@@ -8,6 +8,9 @@
 
   <title>Saito R</title>
 
+  <script type="text/javascript" src="/pace/pace.js"></script>
+  <link rel="stylesheet" href="/pace/pace-theme-flat-top.css" type="text/css" />
+
   <script type="text/javascript" src="/jquery/jquery-3.2.1.min.js"></script>
   <link rel="stylesheet" href="/jquery/jquery-ui.min.css" type="text/css" media="screen" />
   <script type="text/javascript" src="/jquery/jquery-ui.min.js"></script>
@@ -136,6 +139,3 @@
 
 </body>
 </html>
-
-
-
