dReddit css improvements in post.html

--- a/lib/modules/mods/reddit/web/post.html
+++ b/lib/modules/mods/reddit/web/post.html
@@ -59,14 +59,13 @@
           <div class="d_thumb" id="d_thumb"></div>
           <div class="d_content" id="d_content">
             <div style="height: 30px;">
-            <div class="d_content_title" id="d_content_title">Loading Post...</div>
-            <div class="d_content_details" id="d_content_details"></div>
+              <div class="d_content_title" id="d_content_title">Loading Post...</div>
+              <div class="d_content_details" id="d_content_details"></div>
             </div>
           </div>
         </div>
         <div class="d_text" id="d_text"></div>
-          <div class="d_votes" id="d_votes">
-    </div>
+        <div class="d_votes" id="d_votes" style="display:none;"></div>
 
         <div class="add_comment" id="add_comment">
           <textarea class="comment_reply_textarea" id="comment_reply_textarea_0"></textarea>
