--- a/lib/modules/mods/mailchat3/web/index.html
+++ b/lib/modules/mods/mailchat3/web/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" type="text/css" href="/chat/style.css" />
   <link rel="stylesheet" type="text/css" href="/email/style.css" />
 
-  <link rel="icon" media="all" type="image/x-icon" href="/favicon.ico?v=2"/>
+  <link rel="icon" media="all" type="image/x-icon" href="/favicon.ico?v=2" />
 
 </head>
 
@@ -37,10 +37,16 @@
   </div>
 
 
-  <div class="loader">
-    Saito is currently loading....
-    <p></p>
-    We are downloading the application itself into your browser from our server in Los Angeles. The download is reasonably fast in the United States, but can take up to a minute in China due to its size (~1.6 MB). Please be patient.
+  <div class="loader loader-grid">
+    <div class="loader-head">Saito is loading....</div>
+    <div class="loader-throbber">
+      <img src="/img/loading-small.gif" class="module-loading" alt="loading gif" />
+    </div>
+    <div class="loader-message">We are downloading the application into your browser.
+      <div>
+        The download is reasonably fast in the United States, but can take up to a minute in China due to its size (~1.6 MB). Please be patient.
+      </div>
+    </div>
   </div>
 
 
@@ -78,7 +84,10 @@
 
         <div id="primary_nav_wrap" class="mail-controls-apps mail-controls-btn">
           <ul>
-            <li><a href="#"><div id="mail-controls-apps"><i class="fa fa-bars" aria-hidden="true"></i></div></a>
+            <li>
+              <a href="#">
+                <div id="mail-controls-apps"><i class="fa fa-bars" aria-hidden="true"></i></div>
+              </a>
               <ul class="mail-controls-apps-menu">
               </ul>
             </li>
@@ -134,116 +143,124 @@
 
   <style class="text/css">
     #chat_saitoLogo {
-      display:none;
+      display: none;
     }
+
     #chat_saitoText {
       padding-left: 5px;
     }
+
     .mail_chat_popup {
       position: absolute;
       right: 400px;
       bottom: 500px;
     }
+
     #chat_main {
-      height:420px;
+      height: 420px;
     }
+
     #chat_container {
       max-width: 400px;
       background-color: white;
       border: 1px solid #a5a5a5;
     }
+
     .lightbox_message_to_address {
-      cursor:pointer;
+      cursor: pointer;
     }
+
     .lightbox_message_from_address {
-      cursor:pointer;
+      cursor: pointer;
     }
+
     .mail {
       min-height: 400px;
     }
+
     .sidechat {
-     display:none;
-     border: 1px solid #a5a5a5;
-     width: 162px;
-     height: 300px;
-     max-width: 162px;
-     margin-left: auto;
-     margin-right: auto;
-     margin-top: 20px;
-     overflow-y: scroll;
-     overflow-x: none;
+      display: none;
+      border: 1px solid #a5a5a5;
+      width: 162px;
+      height: 300px;
+      max-width: 162px;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 20px;
+      overflow-y: scroll;
+      overflow-x: none;
     }
+
     .sidechat_contact {
-     width: 140px;
-     height: 20px;
-     padding: 2px;
-     background-color: #fff;
+      width: 140px;
+      height: 20px;
+      padding: 2px;
+      background-color: #fff;
     }
+
     .sidechat_contact:hover {
-     cursor: pointer;
-     width: 100%;
-     height: 20px;
-     padding: 2px;
-     background-color: #b1b1e5;
+      cursor: pointer;
+      width: 100%;
+      height: 20px;
+      padding: 2px;
+      background-color: #b1b1e5;
     }
+
     .sidechat_controls {
-     display:none;
-     width:164px;
-     margin-left:auto;
-     margin-right:auto;
+      display: none;
+      width: 164px;
+      margin-left: auto;
+      margin-right: auto;
     }
+
     .sidechat_controls_add {
-     float:left;
-     border-left:1px solid #a5a5a5;
-     border-bottom:1px solid #a5a5a5;
-     width:30px;
-     padding-top:4px;
-     padding-bottom:4px;
-     padding-left:6px;
-     padding-right:6px;
-     background-color:#f7f7f7;
-     border-right: 1px solid #a5a5a5;
-     cursor:pointer;
+      float: left;
+      border-left: 1px solid #a5a5a5;
+      border-bottom: 1px solid #a5a5a5;
+      width: 30px;
+      padding-top: 4px;
+      padding-bottom: 4px;
+      padding-left: 6px;
+      padding-right: 6px;
+      background-color: #f7f7f7;
+      border-right: 1px solid #a5a5a5;
+      cursor: pointer;
     }
+
     .sidechat_controls_info {
-     float:left;
-     border-bottom:1px solid #a5a5a5;
-     width:30px;
-     padding-top:4px;
-     padding-bottom:4px;
-     padding-left:6px;
-     padding-right:6px;
-     background-color:#f7f7f7;
-     border-right: 1px solid #a5a5a5;
-     cursor:pointer;
+      float: left;
+      border-bottom: 1px solid #a5a5a5;
+      width: 30px;
+      padding-top: 4px;
+      padding-bottom: 4px;
+      padding-left: 6px;
+      padding-right: 6px;
+      background-color: #f7f7f7;
+      border-right: 1px solid #a5a5a5;
+      cursor: pointer;
     }
 
 
     @media only screen and (max-width: 535px) {
       .mail_chat_popup {
-        width:100%;
+        width: 100%;
         right: 0px;
       }
       #chat_container {
-        max-width:100%;
+        max-width: 100%;
         border: 0px;
         border-top: 1px solid #a5a5a5
       }
     }
-
-
-
-
   </style>
   <script type="text/javascript">
-
     var chat_container_height = 500;
     var chat_messages = $("#All > p").length;
     var sidechat_length = 0;
 
     // check speed must be faster than init speed
     var chat_check_speed = 3000;
-    var chat_init_speed  = 1000;
+    var chat_init_speed = 1000;
 
 
     var chat_check_timer = setInterval(function() {
@@ -251,15 +268,15 @@
       if (tmpcm > chat_messages) {
         chat_messages = tmpcm;
         if (chat_container_height == 40) {
-          $('#chat_header').css('background-color','#9deca1');
+          $('#chat_header').css('background-color', '#9deca1');
           $('#chat_saitoText').css('color', '#444');
-	  init_length = tmpcm;
+          init_length = tmpcm;
         }
       }
 
       // and check if we have added a user
       if ($(".chat_chat-room-option").length > sidechat_length) {
-	initialize_sidechat();
+        initialize_sidechat();
       }
 
     }, chat_check_speed);
@@ -269,7 +286,7 @@
     $('.sidechat_controls_add').on('click', function(e) {
       let p = prompt('Provide email address or publickey of user to add:');
       if (p != null) {
-        let cmd = "add "+p;
+        let cmd = "add " + p;
         $('.chat_new-message-input').val(cmd);
         var e = jQuery.Event("keypress");
         e.which = 13;
@@ -294,26 +311,28 @@
 
       // otherwise toggle divs
       if (chat_container_height == 500) {
-        $('.mail_chat_popup').css('bottom','40px');
-        $('#chat_new-message').css('display','none');
-        $('.chat_chat-room-selector').css('display','none');
-        $('#chat_header').css('background-color','#fff');
-        $('#chat_saitoText').css('color','#a5a5a5');
+        $('.mail_chat_popup').css('bottom', '40px');
+        $('#chat_new-message').css('display', 'none');
+        $('.chat_chat-room-selector').css('display', 'none');
+        $('#chat_header').css('background-color', '#fff');
+        $('#chat_saitoText').css('color', '#a5a5a5');
         chat_container_height = 40;
       } else {
-        $('.mail_chat_popup').css('bottom','500px');
-        $('#chat_new-message').css('display','block');
-        $('.chat_chat-room-selector').css('display','block');
-        $('#chat_header').css('background-color','#fff');
-        $('#chat_saitoText').css('color','#444');
+        $('.mail_chat_popup').css('bottom', '500px');
+        $('#chat_new-message').css('display', 'block');
+        $('.chat_chat-room-selector').css('display', 'block');
+        $('#chat_header').css('background-color', '#fff');
+        $('#chat_saitoText').css('color', '#444');
         chat_container_height = 500;
       }
     });
-   // shrink chat
+    // shrink chat
     $('#chat_header').click();
 
 
-    setTimeout(function() { initialize_sidechat(); }, chat_init_speed);
+    setTimeout(function() {
+      initialize_sidechat();
+    }, chat_init_speed);
 
 
 
@@ -331,14 +350,16 @@
 
           let n = $(this).html();
           let v = $(this).val();
-          let h = '<div class="sidechat_contact" id="'+v+'">'+n+'</div>';
+          let h = '<div class="sidechat_contact" id="' + v + '">' + n + '</div>';
           $('.sidechat').append(h);
 
           $('.sidechat_contact').off();
           $('.sidechat_contact').on('click', function() {
             $('.chat_chat-room-selector').val($(this).attr('id'));
             $('.chat_chat-room-selector').change();
-            if (chat_container_height < 500) { $('#chat_header').click(); }
+            if (chat_container_height < 500) {
+              $('#chat_header').click();
+            }
             $('#chat_new-message-input').focus();
           });
 
@@ -346,11 +367,10 @@
       });
 
       if (sidechat_length > 1) {
-	$('.mail_chat_popup').show();
+        $('.mail_chat_popup').show();
       }
 
     }
-
   </script>
 
 
