--- a/lib/modules/mods/reddit/web/index.html
+++ b/lib/modules/mods/reddit/web/index.html
@@ -43,10 +43,16 @@
   </div>
 
 
-  <div class="loader">
-    Saito is currently loading....
-    <p></p>
-    We are downloading the application itself into your browser from our server in Los Angeles. The download is reasonably fast in the United States, but can take up to a minute in China due to its size (~1.6 MB). Please be patient.
+  <div class="loader loader-grid">
+    <div class="loader-head">Saito is loading....</div>
+    <div class="loader-throbber">
+      <img src="/img/loading-small.gif" class="module-loading" alt="loading gif" />
+    </div>
+    <div class="loader-message">We are downloading the application into your browser.
+      <div>
+        The download is reasonably fast in the United States, but can take up to a minute in China due to its size (~1.6 MB). Please be patient.
+      </div>
+    </div>
   </div>
 
   <div class="main" style="display:none">
