--- a/lib/modules/mods/facebook/web/index.html
+++ b/lib/modules/mods/facebook/web/index.html
@@ -79,7 +79,7 @@
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="/browser.js"></script>
-  <script src="script.js"></script>
+  <script src="/facebook/script.js"></script>
 
 
 
