--- a/lib/modules/mods/welcome/web/index.html
+++ b/lib/modules/mods/welcome/web/index.html
@@ -11,7 +11,7 @@
 
   <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,800italic,700italic,600italic,400italic,300italic,800,700,600' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="welcome/style.css" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
   <script type="text/javascript" src="/lib/jquery/jquery-3.2.1.min.js"></script>
   <link rel="stylesheet" href="/lib/jquery/jquery-ui.min.css" type="text/css" media="screen" />
   <script type="text/javascript" src="/lib/jquery/jquery-ui.min.js"></script>
