--- a/extras/chrome/modules/mods/new/web/index.html
+++ b/extras/chrome/modules/mods/new/web/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-  <div id="DaveMod_browser_active"></div>
+  <div id="new_browser_active"></div>
 
   <div class="header">
     <a href="/" class="logo_link">
