--- a/lib/modules/mods/appstore/web/success.html
+++ b/lib/modules/mods/appstore/web/success.html
@@ -70,7 +70,7 @@
 
 
   <script src="/socket.io/socket.io.js"></script>
-  <script type="text/javascript">
+  <script src="/browser.js">
 
     var timer = setInterval(function() {
 
