--- a/lib/modules/mods/appstore/email.html
+++ b/lib/modules/mods/appstore/email.html
@@ -14,7 +14,9 @@
   <script type="text/javascript" src="/lib/jquery/jquery-ui.min.js"></script>
 
   <link rel="stylesheet" href="/lib/font-awesome/css/font-awesome.min.css" type="text/css" media="screen" />
-  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="/email/style.css" />
+
+  <link rel="icon" media="all" type="image/x-icon" href="/favicon.ico?v=2"/>
 
 </head>
 
@@ -27,7 +29,7 @@
   <div class="header">
     <a href="/" class="logo_link">
       <img src="/img/saito_logo_black.png" class="logo" />
-      <div class="logo_text">saito mail</div>
+      <div id="saitoname" class="logo_text">saito mail</div>
     </a>
   </div>
 
@@ -39,13 +41,21 @@
   </div>
 
 
-  <div class="main">
+  <div class="main" style="display:none">
 
     <div class="sidebar">
       <div class="compose" id="compose">COMPOSE</div>
       <div class="mailboxes" id="mailboxes">
         <div id="mailbox_inbox" class="mailbox active">Inbox</div>
         <div id="mailbox_sent" class="mailbox">Sent</div>
+      </div>
+
+      <div id="blockchain_syncfade">
+        <div id="blockchain_synclabel">syncing blocks...</div>
+        <div id="blockchain_syncbox">
+          <div id="blockchain_syncbar">
+  	  </div>
+        </div>
       </div>
     </div>
 
@@ -57,6 +67,7 @@
         <div class="mail-controls-back mail-controls-btn" id="mail-controls-back"><i class="fa fa-arrow-left returnButton"></i></div>
 
         <div class="mail-module-label" id="mail-module-label">Settings Module</div>
+
         <div id="primary_nav_wrap" class="mail-controls-apps mail-controls-btn">
           <ul>
             <li><a href="#"><div id="mail-controls-apps"><i class="fa fa-bars" aria-hidden="true"></i></div></a>
@@ -66,7 +77,6 @@
           </ul>
         </div>
 
-        <div class="mail-controls-settings mail-controls-btn" id="mail-controls-settings"><i class="fa fa-cog"></i></div>
         <div class="mail-controls-delete mail-controls-btn" id="mail-controls-delete"><i class="fa fa-trash-o"></i></div>
       </div>
       <div id="mail-alertbox" class="mail-alertbox"></div>
@@ -86,8 +96,8 @@
 
 
   <script src="/socket.io/socket.io.js"></script>
-  <script src="browser.js"></script>
-  <script src="script.js"></script>
+  <script src="/browser.js"></script>
+  <script src="/email/script.js"></script>
 
 </body>
 
